fix teacher manage profile visibility by removing some app.css stuff

--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,7 @@ body {
 .container-fluid {
     padding-right: 0;
     padding-left: 0;
-    padding-bottom: 0;
     height: 100%;
     margin-right: auto;
     margin-left: auto;
-    overflow-y: hidden;
 }
